Bug 93817 - [Chromium] Fix nits in the find-in-page match rects API
Summary: [Chromium] Fix nits in the find-in-page match rects API
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Leandro Graciá Gil
URL:
Keywords:
Depends on: 93111
Blocks:
  Show dependency treegraph
 
Reported: 2012-08-13 03:59 PDT by Leandro Graciá Gil
Modified: 2012-08-13 10:43 PDT (History)
2 users (show)

See Also:


Attachments
Patch (5.00 KB, patch)
2012-08-13 04:07 PDT, Leandro Graciá Gil
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Leandro Graciá Gil 2012-08-13 03:59:02 PDT
This patch is a follow-up of 93111 in order to fix a few pending nits.
Comment 1 Leandro Graciá Gil 2012-08-13 04:07:18 PDT
Created attachment 157956 [details]
Patch
Comment 2 Adam Barth 2012-08-13 10:29:09 PDT
Thanks!
Comment 3 WebKit Review Bot 2012-08-13 10:43:11 PDT
Comment on attachment 157956 [details]
Patch

Clearing flags on attachment: 157956

Committed r125427: <http://trac.webkit.org/changeset/125427>
Comment 4 WebKit Review Bot 2012-08-13 10:43:14 PDT
All reviewed patches have been landed.  Closing bug.