[Chromium] Fix nits in the find-in-page match rects API https://bugs.webkit.org/show_bug.cgi?id=93817

Reviewed by Adam Barth.

This patch fixes a few pending nits from 93111.

Source/WebCore:

Tests: existing WebKit unit test WebFrameTest.FindInPageMatchRects

* dom/Range.cpp:
(WebCore::Range::transformFriendlyBoundingBox): add call to updateLayoutIgnorePendingStylesheets.

Source/WebKit/chromium:

* src/FindInPageCoordinates.cpp: replace a pointer by a reference in an output argument.
(WebKit::toNormalizedRect):
(WebKit::findInPageRectFromAbsoluteRect):


Canonical link: https://commits.webkit.org/111702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125427 268f45cc-cd09-0410-ab3c-d52691b4dbfc